Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cheddar
spec:
  rules:
  - host: cheddar.139.59.237.239.nip.io
    http:
      paths:
      - pathType: Prefix  
        path: /
        backend:
          service:
            name: cheddar
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stilton
spec:
  rules:
  - host: stilton.139.59.237.239.nip.io
    http:
      paths:
      - pathType: Prefix    
        path: /
        backend:
          service:
            name: stilton
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wensleydale
spec:
  rules:
  - host: wensleydale.139.59.237.239.nip.io
    http:
      paths:
      - pathType: Prefix    
        path: /
        backend:
          service:
            name: wensleydale
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dockercoins
spec:
  rules:
  - host: dockercoins.139.59.237.239.nip.io
    http:
      paths:
      - pathType: Prefix    
        path: /
        backend:
          service:
            name: webui
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-google
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: https://www.google.com
spec:
  rules:
  - host: google.139.59.237.239.nip.io
    http:
      paths:
      - pathType: Prefix  
        path: /
        backend:
          service:
            name: doesntmatter
            port:
              number: 80
---
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: oliver-website
    annotations:
      nginx.ingress.kubernetes.io/permanent-redirect: https://www.oliver-website.com/
  spec:
    rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: doesntmatter
                port:
                  number: 80
